@@ -3,6 +3,7 @@ package com.poojahshah.example.chaper.nine;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 // Write your answer here, and then test your code.
 // Your job is to implement the findFiveOrFewer() method.
@@ -23,7 +24,7 @@ public class Answer {
     // Return the a list of words with 5 or fewer characters
     static List<String> findFiveOrFewer(String source) {
         // Your code goes here.
-        List<String> words = Arrays.stream(source.split(" ")).toList();
+        List<String> words = Arrays.stream(source.split(" ")).collect(Collectors.toList());
 
         return words.stream().filter(s -> s.length() <= 5).toList();
     }
